--- a/css/style.css
+++ b/css/style.css
@@ -111,14 +111,20 @@ header{
      padding:50px;
     }
     .party h2{
-        padding:50px;
         color: #fff;
         font-size: 75px;
         font-family: sans-serif;
+        padding-top: 50px;
+        margin-bottom: 10px;
     }
-    .party p{}
+    .party p{
+  color: #ddd;
+  font-size: 16px;
+  margin-bottom: 10px;
+  font-family: 'Roboto Condensed', sans-serif;
+}
     .join_btn{
-        margin-left:50px;
+        /* margin-left:50px; */
         padding: 10px;
         color: #fff;
         background: transparent;
